--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Project1"
         tools:targetApi="31">
         <activity
+            android:name=".ForgotPassword"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".SingUp"
             android:exported="true">
         </activity>
